# blade

./: .gitignore  Cargo.toml  LICENSE  README.md  vk_layer_settings.txt
.github/workflows/: check.yaml
blade-asset/: Cargo.toml  README.md
blade-asset/src/: arena.rs  flat.rs  lib.rs
blade-asset/tests/: main.rs
blade-egui/: Cargo.toml  README.md  shader.wgsl
blade-egui/src/: belt.rs  lib.rs
blade-engine/: Cargo.toml  README.md
blade-engine/src/: config.rs  lib.rs  trimesh.rs
blade-graphics/: Cargo.toml  README.md
blade-graphics/etc/: FAQ.md  motivation.md  performance.md
blade-graphics/src/: derive.rs  lib.rs  shader.rs  traits.rs  util.rs
blade-graphics/src/common/: derive.rs  lib.rs  util.rs
blade-graphics/src/gles/: command.rs  egl.rs  mod.rs  pipeline.rs  resource.rs  web.rs
blade-graphics/src/metal/: command.rs  mod.rs  pipeline.rs  resource.rs  surface.rs
blade-graphics/src/vulkan/: command.rs  descriptor.rs  init.rs  mod.rs  pipeline.rs  query.rs  resource.rs  surface.rs
blade-helpers/: Cargo.toml
blade-helpers/src/: camera.rs  hud.rs  lib.rs
blade-macros/: Cargo.toml
blade-macros/src/: as_primitive.rs  flat.rs  lib.rs  shader_data.rs  vertex.rs
blade-macros/tests/: main.rs
blade-particle/: Cargo.toml  README.md
blade-particle/src/: lib.rs  particle.wgsl  system.rs
blade-render/: Cargo.toml  README.md  debug-blit.wgsl  env-preproc.wgsl  shader.wgsl
blade-render/code/: a-trous.wgsl  accum.inc.wgsl  atrous.wgsl  blur.wgsl  camera.inc.wgsl  color.inc.wgsl  debug-blit.wgsl  debug-draw.wgsl  debug-param.inc.wgsl  debug.inc.wgsl  env-importance.inc.wgsl  env-preproc.wgsl  fill-gbuf.wgsl  gbuf.inc.wgsl  geometry.inc.wgsl  motion.inc.wgsl  noop.wgsl  post-proc.wgsl  quaternion.inc.wgsl  quaternion.wgsl  random.inc.wgsl  raster.wgsl  ray-trace.wgsl  shader.wgsl  surface.inc.wgsl
blade-render/src/: asset_hub.rs  env_map.rs  gltf_loader.rs  lib.rs  renderer.rs  scene.rs  shader.rs
blade-render/src/model/: gltf_loader.rs  mod.rs
blade-render/src/raster/: mod.rs
blade-render/src/render/: debug.rs  dummy.rs  env_map.rs  mod.rs  scene.rs
blade-render/src/texture/: mod.rs
blade-render/src/util/: frame_pacer.rs  mod.rs
blade-util/: Cargo.toml
blade-util/src/: belt.rs  lib.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  FAQ.md  README.md  motivation.md  performance.md
examples/: README.md  bunnymark.rs  bunnymark.wgsl  foo.wgsl  fractal.rs  minimal.rs  minimal.wgsl  triangle.rs
examples-android/: Cargo.toml  README.md  xr.rs  xr.wgsl
examples-android/asteroids/: Cargo.toml  asteroids.rs  asteroids.wgsl  game.rs  mesh.rs
examples-android/xr/: Cargo.toml  xr.rs
examples/bunnymark/: example.rs  main.rs  shader.wgsl
examples/gui/: main.rs
examples/info/: main.rs
examples/init/: env-sample.wgsl  main.rs
examples/matmul/: main.rs  matmul.wgsl
examples/mini/: main.rs  shader.wgsl
examples/move/: main.rs
examples/move/data/: sphere.glb
examples/particle/: belt.rs  gui.rs  gui.wgsl  main.rs  particle.rs  particle.wgsl
examples/ray-query/: example.rs  main.rs  shader.wgsl
examples/ray-trace/: main.rs  shader.wgsl
examples/scene/: main.rs  shader.wgsl
examples/scene/data/: cornellBox.gltf  monkey.gltf  scene.ron
examples/vehicle/: config.rs  main.rs
examples/vehicle/data/: ground.glb  ground.gltf  level.ron  raceFuture-body.glb  raceFuture.ron
lame-graphics/: Cargo.toml
lame-graphics/src/: command.rs  lib.rs  shader.rs
lame-graphics/src/metal/: command.rs  mod.rs  pipeline.rs  resource.rs  surface.rs
lame-graphics/src/vulkan/: mod.rs  pipeline.rs  resource.rs
lame-macros/: Cargo.toml
lame-macros/src/: lib.rs
run-wasm/: Cargo.toml
src/: config.rs  lib.rs
tests/: gpu_examples.rs  parse_shaders.rs  snapshot.rs
tests/bindings/: main.rs  shader.wgsl
tests/shaders/: dispatch.wgsl  env_map_sample.wgsl
