[package]
name = "blade-asset"
version = "0.2.0"
edition = "2021"
description = "Asset manager for Blade"
keywords = ["asset"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[dependencies]
base64 = { workspace = true }
bytemuck = { workspace = true }
choir = { workspace = true }
log = { workspace = true }
profiling = { workspace = true }
