[package]
name = "blade-egui"
version = "0.3.0"
edition = "2021"
description = "egui integration for Blade"
keywords = ["graphics"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[dependencies]
blade-graphics = { version = "0.4", path = "../blade-graphics"}
blade-macros = { version = "0.2", path = "../blade-macros"}
bytemuck = { workspace = true }
egui = { workspace = true, features = ["bytemuck"] }
profiling = { workspace = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = ["blade_graphics::*", "epaint::*"]
