[package]
name = "blade-egui"
version = "0.6.0"
edition = "2021"
description = "egui integration for Blade"
keywords = ["graphics"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[dependencies]
blade-graphics = { version = "0.7", path = "../blade-graphics" }
blade-macros = { version = "0.3", path = "../blade-macros" }
blade-util = { version = "0.3", path = "../blade-util" }
egui = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true }
profiling = { workspace = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = ["blade_graphics::*", "epaint::*"]
