[package]
name = "blade-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/kvark/blade"
description = "Blade engine layer"

[dependencies]
blade-asset = { workspace = true }
blade-egui = { workspace = true }
blade-graphics = { workspace = true }
blade-helpers = { workspace = true }
blade-particle = { workspace = true }
blade-render = { workspace = true }
base64 = { workspace = true }
choir = { workspace = true }
colorsys = "0.6"
egui = { workspace = true }
glam = { workspace = true }
gltf = { workspace = true }
log = { workspace = true }
mint = { workspace = true, features = ["serde"] }
nalgebra = { version = "0.33", features = ["mint"] }
num_cpus = { workspace = true }
profiling = { workspace = true }
rapier3d = { version = "0.23", features = ["debug-render"] }
serde = { version = "1", features = ["serde_derive"] }
slab = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
openxr = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(gles)'] }
