[package]
name = "blade-macros"
version = "0.1.0"
edition = "2021"
description = "Macros helpers for Blade users"
keywords = ["proc-macro"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1"
quote = "1.0"