[package]
name = "blade-macros"
version = "0.2.1"
edition = "2021"
description = "Macros helpers for Blade users"
keywords = ["proc-macro"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1"
quote = "1.0"

[dev-dependencies]
blade-graphics = { version = "0.4", path = "../blade-graphics" }
blade-asset = { version = "0.2", path = "../blade-asset" }
bytemuck = { workspace = true }
