[package]
name = "blade-macros"
version = "0.3.0"
edition = "2024"
description = "Macros helpers for Blade users"
keywords = ["proc-macro"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1"
quote = "1.0"

[dev-dependencies]
blade-graphics = { workspace = true }
blade-asset = { workspace = true }
bytemuck = { workspace = true }
mint = { workspace = true }
