[package]
name = "blade-particle"
version = "0.1.0"
description = "Particle system for blade"
edition = "2021"
license = "MIT"

[dependencies]
blade-graphics = { version = "0.7", path = "../blade-graphics" }
blade-macros = { version = "0.3", path = "../blade-macros" }
bytemuck = { workspace = true }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
