[package]
name = "blade-particle"
version = "0.1.0"
description = "Particle system for blade"
edition = "2024"
license = "MIT"

[dependencies]
blade-graphics = { workspace = true }
blade-macros = { workspace = true }
bytemuck = { workspace = true }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
