[package]
name = "blade-render"
version = "0.1.0"
edition = "2021"
description = "Renderer built on Blade"
keywords = ["graphics", "engine"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[features]
default = ["asset"]
asset = ["gltf" , "base64", "exr", "texpresso", "zune-core", "zune-jpeg", "zune-png"]

[dependencies]
base64 = { workspace = true, optional = true }
blade-graphics = { version = "0.2", path = "../blade-graphics" }
blade-asset = { version = "0.1", path = "../blade-asset" }
blade-macros = { version = "0.2", path = "../blade-macros" }
bytemuck = { workspace = true }
choir = { workspace = true }
exr = { version = "1.6", optional = true }
gltf = { version = "1.1", default-features = false, features = ["names", "utils"], optional = true }
glam = { workspace = true }
log = { workspace = true }
mint = { workspace = true }
profiling = { workspace = true }
texpresso = { version = "2.0", optional = true }
zune-core = { version = "0.2", optional = true }
zune-jpeg = { version = "0.3", optional = true }
zune-png = { version = "0.2", optional = true }
