[package]
name = "blade-render"
version = "0.1.0"
edition = "2021"
description = "Renderer built on Blade"
keywords = ["graphics", "engine"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[features]
default = ["asset"]
asset = ["gltf" , "base64", "exr", "mikktspace", "slab", "texpresso", "zune-core", "zune-jpeg", "zune-png", "zune-imageprocs"]

[dependencies]
base64 = { workspace = true, optional = true }
bitflags = { workspace = true }
blade-graphics = { version = "0.2", path = "../blade-graphics" }
blade-asset = { version = "0.1", path = "../blade-asset" }
blade-macros = { version = "0.2", path = "../blade-macros" }
bytemuck = { workspace = true }
choir = { workspace = true }
exr = { version = "1.6", optional = true }
gltf = { version = "1.1", default-features = false, features = ["names", "utils"], optional = true }
glam = { workspace = true }
log = { workspace = true }
mikktspace = { package = "bevy_mikktspace", version = "0.10", optional = true }
mint = { workspace = true }
profiling = { workspace = true }
slab = { workspace = true, optional = true }
strum = { workspace = true }
texpresso = { version = "2.0", optional = true }
#zune-core = { version = "0.2", optional = true }
#zune-jpeg = { version = "0.3", optional = true }
#zune-png = { version = "0.2", optional = true }
zune-core = { git = "https://github.com/etemesi254/zune-image", optional = true }
zune-jpeg = { git = "https://github.com/etemesi254/zune-image", optional = true }
zune-png = { git = "https://github.com/etemesi254/zune-image", optional = true }
zune-imageprocs = { git = "https://github.com/etemesi254/zune-image", optional = true }
