[package]
name = "blade-render"
version = "0.3.0"
edition = "2021"
description = "Renderer built on Blade"
keywords = ["graphics", "engine"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[features]
default = ["asset"]
asset = [
    "gltf",
    "base64",
    "exr",
    "mikktspace",
    "slab",
    "texpresso",
    "zune-core",
    "zune-jpeg",
    "zune-png",
    "zune-hdr",
    "zune-imageprocs",
]

[dependencies]
base64 = { workspace = true, optional = true }
bitflags = { workspace = true }
blade-graphics = { version = "0.4", path = "../blade-graphics" }
blade-asset = { version = "0.2", path = "../blade-asset" }
blade-macros = { version = "0.2.1", path = "../blade-macros" }
bytemuck = { workspace = true }
choir = { workspace = true }
exr = { version = "1.6", optional = true }
gltf = { workspace = true, features = ["names", "utils"], optional = true }
glam = { workspace = true }
log = { workspace = true }
mikktspace = { package = "bevy_mikktspace", version = "0.12", optional = true }
mint = { workspace = true }
profiling = { workspace = true }
slab = { workspace = true, optional = true }
strum = { workspace = true }
texpresso = { version = "2.0", optional = true }
zune-core = { version = "0.4", optional = true }
zune-jpeg = { version = "0.4", optional = true }
zune-png = { version = "0.4", optional = true }
zune-hdr = { version = "0.4", optional = true }
zune-imageprocs = { version = "0.4", optional = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "bitflags::*",
    "blade_asset::*",
    "blade_graphics::*",
    "bytemuck::*",
    "choir::*",
    "epaint::*",
    "mint::*",
    "strum::*",
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(gles)'] }
