[package]
name = "blade-util"
version = "0.4.1"
edition = "2024"
description = "Utility logic for Blade applications"
keywords = ["graphics"]
license = "MIT"
repository = "https://github.com/kvark/blade"

[lib]

[dependencies]
blade-graphics = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
profiling = { workspace = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = ["blade_graphics::*"]
