[package]
name = "lame-graphics"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitflags = "1"
bytemuck = "1"
log = "0.4"
naga = { version = "0.10", features = ["wgsl-in"] }
raw-window-handle = "0.5"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block = "0.1"
core-graphics-types = "0.1"
foreign-types = "0.3"
metal = "0.24"
objc = "0.2.5"
naga = { features = ["msl-out"] }

[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
ash = "0.37"
naga = { features = ["spv-out"] }
