[package]
name = "blade-android-asteroids"
version = "0.1.0"
publish = false
edition = "2024"

[features]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
blade-asset = { workspace = true }
blade-engine = { workspace = true }
blade-particle = { workspace = true }
blade-graphics = { workspace = true }
blade-render = { workspace = true }
mint = { workspace = true }
openxr = { workspace = true }
log = { workspace = true }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

[lib]
name = "asteroids"
path = "asteroids.rs"
crate-type = ["cdylib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
runtime_libs = "../libs"
assets = "../../blade-render/code"
label = "Blade Asteroids"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 30

[package.metadata.android.signing.release]
path = "../keystore/debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[package.metadata.android.application]
label = "Blade Asteroids"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"

[package.metadata.android.application.activity]
label = "Blade Asteroids"
exported = true
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
]
