[package]
name = "blade-android-xr"
version = "0.1.0"
publish = false
edition = "2021"

[features]

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
blade-graphics = { version = "0.7", path = "../../blade-graphics" }
blade-macros = { version = "0.3", path = "../../blade-macros" }
openxr = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
log = { workspace = true }
libc = "0.2.50"
libloading = "0.8"
ndk-glue = "0.7"
ndk-context = "0.1"
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.14"

[lib]
name = "xr"
path = "xr.rs"
crate-type = ["cdylib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
runtime_libs = "../libs"
label = "Blade XR"

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 30

[package.metadata.android.signing.release]
path = "../keystore/debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[package.metadata.android.application.activity]
label = "Blade XR"
theme = "@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = [
    "com.oculus.intent.category.VR",
    "android.intent.category.LAUNCHER",
]
